--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="Form.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
     <div>
@@ -20,6 +21,7 @@
                         <img src="Uploads/call_50.png" alt="call" height="32px" width="32px">
                     </div>
                     <div>
+                        <i class="ri-phone-line"></i>
                         <p><a href="tel:9833213205">9833213205</a></p>
                     </div>
                 </div>
